--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.8",
         "laravolt/avatar": "^5.0",
         "livewire/livewire": "^3.1",
+        "milon/barcode": "^11.0",
         "mimisk13/laravel-tabler": "^0.0.5",
         "phpoffice/phpspreadsheet": "^1.28",
         "picqer/php-barcode-generator": "^2.2",
