--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "picqer/php-barcode-generator": "^2.2",
         "power-components/livewire-powergrid": "^5.1",
         "rappasoft/laravel-livewire-tables": "^3.1",
-        "revolution/laravel-google-sheets": "^6.3"
+        "revolution/laravel-google-sheets": "^6.3",
+        "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
